small layout issues
git-svn-id: https://svn.radicaldesigns.org/daysofaction@1146 8f85c81b-0f21-0410-93f9-e2b37b76a6fe

--- a/trunk/themes/momsrising/stylesheets/momsrising.css
+++ b/trunk/themes/momsrising/stylesheets/momsrising.css
@@ -5,3 +5,6 @@
 BODY {
   
 }
+select {
+background-color:#EBD897;
+}
